test/scc/expr/semantic-errors/141.t
struct
{
	int a;
} b;

int c = b.a;